# python-security-benchmark

./: README.md  pyproject.toml  requirements.txt
sast/: BenchmarkTest00001.py  BenchmarkTest00002.py  BenchmarkTest00003.py  BenchmarkTest00004.py  BenchmarkTest00005.py  BenchmarkTest00006.py  BenchmarkTest00007.py  expectedresults.csv  google-genai-test.py
sca-reachability/: django-cachalot_dead.py  django-cachalot_reachable.py  flask_dead.py  flask_reachable.py  huggingface-llm-test_dead.py  huggingface-llm-test_reachable.py  requests_dead.py  requests_reachable.py  scikit-learn_dead.py  scikit-learn_reachable.py  transformers_dead.py  transformers_reachable.py
