[tool.poetry]
name = "python-security-benchmark"
version = "0.1.0"
description = "Security benchmark for testing SCA Reachability tools with vulnerable code paths"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.9"
werkzeug = "3.1.3"
idna = "2.10"
requests = "2.24.0"
transformers = "4.57.1"
flask = "2.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.1.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
